--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ h1{
 }
 
 #homepage-donation-box {
-  background-image:url('http://via.placeholder.com/940x275');
+  background-image:url('//s2fevents.co.uk/wp-content/uploads/2018/10/donation-hero.png');
   display: block;
   height: 275px;
   margin: 0 auto 30px;
@@ -32,21 +32,22 @@ h1{
 #homepage-donation-box button {
   display: flex;
   justify-content: center;
-  background: #E48555;
+  background: rgba(228, 133, 85, 0.75);
   border: 1px solid #fff;
   border-radius: 5px;
   padding: 10px 30px;
   color: #fff;
   text-transform: uppercase;
   transition: all .2s ease-in-out;
+  text-decoration:none!important;
 }
 
-#homepage-donation-box button:hover { transform: scale(1.1); }
+#homepage-donation-box button:hover { transform: scale(1.1); background: rgba(228, 133, 85, 1); text-decoration:none!important }
 
 hr.orange-div{
-  border-top:3px solid orange!important;
+  border-top:3px solid #E48555!important;
   border-radius:10px!important;
-  margin-top:30px;
+  margin-top:50px;
 }
 
 /* Hover Effects */
@@ -129,6 +130,44 @@ hr.orange-div{
   filter: alpha(opacity=100);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
+}
+
+/* Video Box */
+
+#homepage-video-boxes {
+  background: #E48555;
+  padding: 15px 0;
+  min-height:350px;
+  color:#fff!important;
+}
+
+#homepage-video-boxes h3 {
+  font-size: 2.2em!important;
+  color: #fff!important;
+  border-bottom: 1px solid #efefef;
+  padding-bottom: 10px;
+  width: 80%;
+  margin: 20px auto 25px;
+}
+
+#homepage-video-boxes p {
+  color:#fff!important;
+  width: 80%;
+  margin:0 auto;
+}
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 </style>
